# mason_bricks

./: .gitignore  README.md  mason.yaml
bricks/flutter_rust_bridge/: CHANGELOG.md  LICENSE  README.md  brick.yaml
bricks/flutter_rust_bridge/__brick__/: justfile  {{~ bridge.h }}  {{~ rust.cmake }}
bricks/flutter_rust_bridge/__brick__/lib/src/: {{name}}.dart
bricks/flutter_rust_bridge/__brick__/lib/src/{{name}}/: {{bridge}}.dart  {{name}}.dart
bricks/flutter_rust_bridge/__brick__/lib/src/{{name}}/{{#wasm}}{{name}}.web.dart{{/: wasm}}
bricks/flutter_rust_bridge/__brick__/{{#justfile}}justfile{{/: justfile}}
bricks/flutter_rust_bridge/__brick__/{{#linux}}linux{{/linux}}/{{#cmake_linux}}rust.cmake{{/: cmake_linux}}
bricks/flutter_rust_bridge/__brick__/{{#macos}}macos{{/macos}}/Runner/: {{bridge}}.{{name.snakeCase()}}.h
bricks/flutter_rust_bridge/__brick__/{{name}}/: Cargo.toml  build.rs
bricks/flutter_rust_bridge/__brick__/{{name}}/src/: api.rs  lib.rs  {{bridge}}.rs
bricks/flutter_rust_bridge/hooks/: post_gen.dart  pre_gen.dart  pubspec.yaml
